-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: None
-
Component/s: client-libs
-
None
-
b131
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8373032 | 8u491 | Fairoz Matte | P1 | Closed | Fixed | b01 |
jdk9/jdk/src/java.desktop/share/native/libjavajpeg/imageioJPEG.c:2801:19: error: incompatible pointer types passing 'UINT8 **' (aka 'unsigned char **') to parameter of type 'void **' [-Werror,-Wincompatible-pointer-types]
freeArray(scale, numBands);
^~~~~
jdk9/jdk/src/java.desktop/share/native/libjavajpeg/imageioJPEG.c:2637:30: note: passing argument to parameter 'arr' here
static void freeArray(void** arr, jint size) {
^
freeArray(scale, numBands);
^~~~~
jdk9/jdk/src/java.desktop/share/native/libjavajpeg/imageioJPEG.c:2637:30: note: passing argument to parameter 'arr' here
static void freeArray(void** arr, jint size) {
^
- backported by
-
JDK-8373032 Mac build failure
-
- Closed
-