8162545: Mac build failure

Reviewed-by: psadhukhan, prr